--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -8,7 +8,7 @@
     "preview": "rsbuild preview",
     "format": "npx @biomejs/biome format --write ./src",
     "lint": "npx @biomejs/biome lint",
-    "pocketbase:typegen": "npx pocketbase-typegen --db ../pb_data/data.db --out ./src/api/pocketbase-types.ts"
+    "pocketbase:typegen": "npx pocketbase-typegen --db ../pb_data/data.db --out ./src/api/pocketbase-types.ts && npx @biomejs/biome format --write ./src/api/pocketbase-types.ts"
   },
   "dependencies": {
     "@preact/signals-react": "^2.2.0",
