--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@preact/signals-react": "^2.2.0",
     "@radix-ui/themes": "^3.1.3",
+    "classix": "^2.2.0",
     "date-fns": "^4.1.0",
     "pocketbase": "^0.21.5",
     "react": "^18.3.1",
