--- a/modd.conf
+++ b/modd.conf
@@ -1,3 +1,3 @@
 **/*.go {
-    daemon +sigterm: "AUTOMIGRATE=true CGO_ENABLED=0 go run main.go serve"
+    daemon +sigterm: "AUTOMIGRATE=true CGO_ENABLED=0 go run main.go serve --http 0.0.0.0:8090"
 }
