--- a/biome.json
+++ b/biome.json
@@ -4,6 +4,9 @@
         "rules": {
             "correctness": {
                 "useExhaustiveDependencies": "off"
+            },
+            "style": {
+                "noParameterAssign": "off"
             }
         }
     }
