--- a/react-native-frontend/package.json
+++ b/react-native-frontend/package.json
@@ -23,22 +23,20 @@
     "expo-font": "~13.0.1",
     "expo-image-picker": "~16.0.3",
     "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.14",
+    "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
     "expo-status-bar": "~2.0.0",
     "expo-system-ui": "~4.0.6",
     "expo-web-browser": "~14.0.1",
-    "pocketbase": "^0.22.1",
+    "pocketbase": "^0.25.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.4.0",
     "react-native-sse": "^1.2.1",
     "react-native-svg": "15.8.0",
-    "react-native-ui-lib": "^7.33.0",
     "react-native-web": "~0.19.10",
     "recoil": "^0.7.7"
   },
