feat: use own forked version of react-native-calendars

--- a/react-native-frontend/package.json
+++ b/react-native-frontend/package.json
@@ -16,12 +16,12 @@
 		"@react-native-async-storage/async-storage": "1.23.1",
 		"@react-native-community/datetimepicker": "8.2.0",
 		"date-fns": "^4.1.0",
-		"expo": "~52.0.26",
+		"expo": "~52.0.31",
 		"expo-checkbox": "~4.0.1",
 		"expo-clipboard": "~7.0.1",
 		"expo-constants": "~17.0.5",
 		"expo-font": "~13.0.1",
-		"expo-image-picker": "~16.0.4",
+		"expo-image-picker": "~16.0.5",
 		"expo-linking": "~7.0.5",
 		"expo-router": "~4.0.17",
 		"expo-splash-screen": "~0.29.21",
@@ -30,8 +30,8 @@
 		"pocketbase": "^0.25.0",
 		"react": "18.3.1",
 		"react-dom": "18.3.1",
-		"react-native": "0.76.6",
-		"react-native-calendars": "^1.1307.0",
+		"react-native": "0.76.7",
+		"react-native-calendars": "git+https://github.com/christiankozalla/react-native-calendars.git#917536f9c6856478c5bc5714acdde5696d0cad56",
 		"react-native-reanimated": "~3.16.1",
 		"react-native-screens": "~4.4.0",
 		"react-native-sse": "^1.2.1",
