--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,11 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": "never"
   },
+  "files.associations": {
+    "*.gohtml": "html"
+  },
   "[html]": {
-    "editor.defaultFormatter": "biomejs.biome"
+    "editor.defaultFormatter": "vscode.html-language-features"
   },
   "[ts]": {
     "editor.defaultFormatter": "biomejs.biome"
